--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "baseUrl": ".", // myconfig
     "paths": {
 			// myconfig
-			"@components": ["./src/components"],
-			"@services": ["./src/services"],
-			"@interface": ["./src/interfaces/interface.ts"],
+			"@components": ["./components"],
+			"@services": ["./services"],
+			"@interfaces": ["./interfaces/interface.ts"],
 		},
     "target": "es2020", // myconfig
     "lib": ["dom", "dom.iterable", "esnext"],
