--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/roboto": "^4.5.5",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
+    "http-proxy": "^1.18.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
