--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "http-proxy": "^1.18.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
     "@types/node": "17.0.24",
