--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
     "axios": "^0.26.1",
+    "axios-observable": "^1.4.0",
     "http-proxy": "^1.18.1",
     "next": "12.1.5",
     "react": "18.0.0",
