--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/roboto": "^4.5.5",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
+    "@types/http-proxy": "^1.17.8",
     "axios": "^0.26.1",
     "axios-observable": "^1.4.0",
     "http-proxy": "^1.18.1",
