--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/open-sans": "^4.5.8",
     "@fontsource/roboto": "^4.5.5",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
@@ -33,6 +34,7 @@
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "postcss": "^8.4.12",
+    "sass": "^1.50.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
