--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "http-proxy": "^1.18.1",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-dnd": "^16.0.0",
+    "react-dnd-html5-backend": "^16.0.0",
     "react-dom": "18.0.0",
     "rxjs": "^7.5.5"
   },
