--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dnd": "^16.0.0",
     "react-dnd-html5-backend": "^16.0.0",
     "react-dom": "18.0.0",
+    "react-query": "^3.34.20",
     "react-redux": "^7.2.8",
     "rxjs": "^7.5.5"
   },
