--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/open-sans": "^4.5.8",
     "@fontsource/roboto": "^4.5.5",
+    "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
     "@reduxjs/toolkit": "^1.8.1",
@@ -28,9 +29,11 @@
     "react-dnd": "^16.0.0",
     "react-dnd-html5-backend": "^16.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.30.0",
     "react-query": "^3.34.20",
     "react-redux": "^7.2.8",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.24",
